--- a/wuwei.html
+++ b/wuwei.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>⭐️帮助吴魏跳过烧香⭐️</title>
+		<link href="./file/style.css" rel="stylesheet" type="text/css" />
+		<script src="./file/vue.min.js"></script>
+		<link rel="shortcut icon" href="./img/icon.ico">
+	</head>
+	<body>
+		<h1 id="title">⭐️帮助吴魏跳过烧香⭐️</h1>
+		<p id="gd">分数：</p>
+		<canvas id="zhengbindiv"></canvas>
+		<script src="./file/js2.js"></script>
+	</body>
+</html>
