--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1 id="title">⭐️帮助吴魏跳过李永远⭐️</h1>
 		<p id="gd">分数：</p>
-		<canvas id="zhengbindiv"></canvas>
+		<canvas id="wuweidiv"></canvas>
 		<script src="./file/js2.js"></script>
 	</body>
 </html>
